chore: update Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-gtk = "0.18.2"
-webkit2gtk = "2.0.1"
+glib = "0.18.5"
+gio = "0.18.4"
+gtk = "0.18.2"          # GTK3
+webkit2gtk = "2.0.1"    # GTK3 WebKit2GTK
