feat!: use composite templates instead of Rust API
GTK recommends using composite templates to ensure UI is described
independently of logic in XML
files(https://gtk-rs.org/gtk4-rs/stable/latest/book/composite_templates.html).
Replace the implementation that used the Rust builder pattern API to
construct the UI with templates.

BREAKING CHANGE: Regresses the webview from the UI.

Signed-off-by: Ivin Joel Abraham <ivinjoelabraham@proton.me>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+glib = "0.21.4"
 gtk4 = { version = "0.10.1", features = ["v4_20"] }
 webkit6 = "0.5.0"
+
+[build-dependencies]
+glib-build-tools = "0.21.0"
