--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 glib = "0.21.4"
 gtk4 = { version = "0.10.1", features = ["v4_20"] }
+rand = "0.9.2"
 webkit6 = "0.5.0"
 
 [build-dependencies]
